fixing a lot of styling and layout issues,  adding in the api key from mapbox, adding responsive design

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 @charset "utf-8";
 /* CSS Document */
 
+
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
+}
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 body {
 	background-color: #fdfdfd;
@@ -53,7 +59,10 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -72,6 +81,7 @@ nav h1 a {
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
+    z-index: 2;
 }
 
 /* Display list items side by side */
@@ -109,6 +119,10 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .filter-options h2 {
   color: white;
@@ -116,6 +130,9 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding: 10px 0;
+  width: 100%;
+  text-align: center;
 }
 .filter-options select {
   background-color: white;
@@ -124,7 +141,7 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 0 10px;
   padding: 0 10px;
   width: 200px;
 }
@@ -136,6 +153,10 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -144,7 +165,7 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
+  text-align: center;
   width: 270px;
 }
 #restaurants-list .restaurant-img {
@@ -183,6 +204,9 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.inside {
+  position: relative;
+}
 .inside header {
   position: fixed;
   top: 0;
@@ -191,7 +215,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -204,8 +228,17 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
+  padding: 25px 0;
   position: absolute;
   width: 50%;
+}
+#restaurant-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 140px;
+  padding-bottom: 32px;
 }
 #restaurant-name {
   color: #f18200;
@@ -216,13 +249,17 @@ nav h1 a {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+  width: 100%;
+  text-align: center;
 }
 #restaurant-img {
 	width: 90%;
 }
 #restaurant-address {
   font-size: 12pt;
-  margin: 10px 0px;
+  margin: 10px 0 20px 0;
+  width: 100%;
+  text-align: center;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -231,7 +268,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 6px 0;
   text-align: center;
   text-transform: uppercase;
 	width: 90%;
@@ -239,11 +276,11 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 0;
+  padding-bottom: 100px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -251,6 +288,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  padding: 0 30px;
 }
 #reviews-list {
   margin: 0;
@@ -261,9 +299,10 @@ nav h1 a {
     border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 auto;
+  margin-bottom: 20px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px 20px;
   position: relative;
   width: 85%;
 }
@@ -272,4 +311,127 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* ---------------------FRONT PAGE QUERIES--------------------- */
+@media screen and (min-width: 1400px) {
+  .wrapper {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  #restaurants-list li {
+    padding: 0;
+    padding-bottom: 24px;
+    margin: 0;
+    margin-bottom: 24px;
+    width: 80%;
+  }
+  #restaurants-list .restaurant-img {
+    max-width: 100%;
+    min-height: auto;
+    min-width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav h1 a {
+    font-size: 10pt;
+  }
+  #map {
+    height: 320px;
+  }
+  .filter-options select {
+    width: 150px;
+    font-size: 9pt;
+  }
+  #restaurants-list li {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  nav h1 {
+    text-align: center;
+  }
+  .filter-options select {
+    width: auto;
+  }
+}
+
+/* ---------------------INFORMATION QUERIES--------------------- */
+
+@media screen and (max-width: 1000px) {
+  #restaurant-container{
+    padding: 24px 0;
+    padding-top: 140px;
+    justify-content: center;
+    align-items: center;
+  }
+  #restaurant-address {
+    text-align: center;
+  } 
+}
+
+@media screen and (max-width: 800px){
+  .inside #map-container {
+    position: relative;
+    top: 128px;
+    width: 100%;
+    height: 50vh;
+    z-index: 0;
+  } 
+  #restaurant-container, #reviews-container {
+    width: 100%;
+  }
+  #restaurant-container {
+    margin: 0;
+  }
+  #reviews-container h2{
+    text-align: center;
+    margin: 0;
+  }
+  #restaurant-img, #restaurant-cuisine {
+    max-width: 420px;
+  }
+  #breadcrumb {
+    width: 100%;
+    padding: 12px 0;
+    text-align: center;
+  }
+  .inside #footer {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px){
+  #restaurant-img, #restaurant-cuisine {
+    max-width: 420px;
+  }
+}
+
+@media screen and (max-width: 400px){
+  #restaurant-hours {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1000px){
+  #restaurant-img, #restaurant-cuisine {
+    max-width: 540px;
+  }
+}
+
+@media screen and (min-width: 1800px){
+  #restaurant-img, #restaurant-cuisine {
+    max-width: none;
+    width: 680px;
+  }
 }
